<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bullet</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_countdown">COUNTDOWN</string>
    <string name="action_settings">Settings</string>
    <string name="btn_join">Join Squad</string>
    <string name="btn_diagonal">Diagonal</string>
    <string name="btn_tbd">TBD</string>
    <string name="title_activity_diagonal">DiagonalActivity</string>
    <string name="title_activity_drawing">DrawingActivity</string>
    <string name="btn_draw">Draw</string>
    <string name="btn_shape">Shapes</string>
    <string name="btn_select">Select</string>
    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="btn_countdown">Countdown</string>
    <string name="title_activity_scratch">ScratchActivity</string>
    <string name="btn_scratch">Scratch</string>
    <string name="tv_diagonal_results">Your score</string>
    <string name="tv_diagonal_header">Draw a vertical line</string>
    <string name="btn_score">Score Me</string>
    <string name="btn_clearscreen">Clear Screen</string>
    <string name="btn_shoot">Shoot!</string>
    <string name="title_activity_shoot">ShootActivity</string>
    <string name="btn_takephoto">Take Photo</string>
    <string name="btn_launchcamera">Launch Camera</string>
    <string name="tv_countdowncount">10</string>
    <string name="btn_begin">Begin</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="tv_currentmembers">Current members:</string>
    <string name="tv_currentmemberlist">The squad is currently empty.</string>
    <string name="tv_entername">Enter your display name</string>
    <string name="tv_displayname">Your screenname is \"Member#1\"</string>
    <string name="title_activity_leader">LeaderActivity</string>
    <string name="btn_leader">Leader</string>
    <string name="tv_leaderwelcomemessage">You are the leader</string>
    <string name="et_enterName">Enter your display name</string>
    <string name="btn_changename">Change Name</string>

</resources>
